MCKIN-4471 Fixed large mckinsey logo on IE

--- a/static/scss/home/landing.scss
+++ b/static/scss/home/landing.scss
@@ -237,6 +237,7 @@
             img{
                 width: 36%;
                 min-width: 215px;
+                max-width: 366px;
             }
         }
     }
